# womter

./: .gitignore  Makefile  README.md  requirements.txt  run.bat  run.ps1
analyzer/: Makefile  README.md  env.example  main.py  patterns.json  pyproject.toml  requirements.txt  run.bat  run.ps1
analyzer/src/: analyzer.py  data_reader.py  main.py  pattern_reader.py  writter.py
analyzer/src/womter/: excel_writer.py  reader.py
analyzer/src/womter.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
api/: Makefile
api/src/: main.py  writter.py
merger/: Makefile
merger/src/: main.py  reader.py  writter.py
src/: controller.py  main.py  mocks.py  settings.py  writter.py
src/womter/: __init__.py  pattern_matcher.py
src/womter.egg-info/: PKG-INFO
